<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:background="@android:color/black"
        >
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/panel"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerTitle"
                style="@style/textViewTitle"/>
        <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/editText"
                android:hint="@string/username"
                />
        <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/editText"
                android:hint="@string/password"
                android:password="true"/>
        <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/editText"
                android:hint="@string/confirmPassword"
                android:password="true"/>
        <Button
                android:id="@+id/signUpButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp"/>
    </LinearLayout>
</LinearLayout>