<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:background="@android:color/black"
        >
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/panel"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
        <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/editText"
                android:hint="@string/username"
                />
        <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/editText"
                android:hint="@string/password"
                android:password="true"/>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textView"
                    android:text="@string/remember_me"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"/>
            <Switch
                    android:id="@+id/rememberMeSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"/>
        </RelativeLayout>
        <Button
                android:id="@+id/loginButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"/>
        <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/registerButton"
                android:text="@string/registerText"/>
    </LinearLayout>
</LinearLayout>